<resources>
    <string name="app_name">Time2eaT</string>
    <string name="choose_cafeteria_title">Choose Cafeteria</string>
    <string name="choose_cafeteria_hint">Search Cafeteria..</string>
    <string name="choose_cafeteria_btn">Next</string>
    <string name="choose_cafeteria_toast">You must choose cafeteria</string>
    <string name="drawer_header_text">Header Title</string>
    <string name="nav_item_menu">Home</string>
    <string name="nav_item_history">Orders History</string>
    <string name="nav_item_personal">Personal Details</string>
    <string name="nav_item_points">My Points</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_log_out">Log Out</string>
    <string name="nav_item_about">About the app</string>
    <string name="nav_item_language">Switch language to Hebrew</string>
    <string name="nav_item_change_cafeteria">Change Cafeteria</string>
    <string name="active_cafeteria">Active Cafeteria -</string>
    <string name="cafeteria_closed">is closed</string>
    <string name="cafeteria_not_open">open in</string>
    <string name="categories_tab_title">Categories</string>
    <string name="specials_tab_title">Specials</string>
    <string name="favorites_tab_title">Your Favorites</string>
    <string name="loginBtnText">Login</string>
    <string name="signup_text">No account yet? Create one</string>
    <string name="login_error">Wrong Login details</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup_title">Sign Up</string>
    <string name="login_text">Already a member? Login</string>
    <string name="signUpBtnText">Sign Up</string>
    <string name="btn_signup_failed">Sign up failed !</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="email_address_error">Enter a valid email address</string>
    <string name="new_password_error">Must be 6-20 characters</string>
    <string name="passwords_no_match_error">Passwords are not equal</string>
    <string name="empty_error">Field can\'t be empty</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signup_error">Some of the details aren\'t correct</string>
    <string name="facebook_app_id">1045054335615065</string>
    <string name="email_in_use">This email is already taken!</string>
    <string name="sign_up_successfull">Account created successfully</string>
    <string name="exit_dialog_title">Exit Application</string>
    <string name="exit_dialog_message">Are you sure you want to exit ?</string>
    <string name="exit_dialog_postive">Yes</string>
    <string name="exit_dialog_negative">No</string>
    <string name="progressBar_pre_execute">Please Wait..</string>
    <string name="progressBar_post_execute_error">Please check your internet connection</string>
    <string name="progressBar_post_execute_success">Loading Complete</string>
    <string name="progressBar_progress_update">Loading Components..</string>
    <string name="server_off">Oops, We could not connect right now.\nPlease Try again later</string>
    <string-array name="titleAnimation">
        <item>Time2eaT</item>
        <item>Your Place To Eat</item>
        <item>Time2eaT</item>

    </string-array>
    <string name="alert_dialog_no_internet_title">No Internet Access</string>
    <string name="alert_dialog_no_internet_positive_button">Try Again</string>
    <string name="alert_dialog_no_internet_negative_button">Go Offline</string>
    <string name="btn_move_to_payment">Pay</string>
    <string name="ordered_meals">Meals</string>
    <string name="ordered_items">Items</string>
    <string name="pay_amount">To pay</string>
    <string name="nav_item_cart">To your cart</string>
    <string name="empty_cart">Your cart is empty !</string>
    <string name="clear_order">Clear Order</string>
    <string name="alert_dialog_delete_item_title">Are you sure you want to delete this item?</string>
    <string name="alert_dialog_delete_item_positive_button">Delete</string>
    <string name="alert_dialog_delete_item_negative_button">Cancel</string>
    <string name="dialog_time_picker_title">Select Time For Picking your order</string>
    <string name="dialog_time_picker_limit_time">Sorry, We need at least 15 minutes to prepare your order</string>
    <string name="dialog_time_picker_time_passed">This time has already passed !</string>
    <string name="category_items_meals">Meals</string>
    <string name="categotry_items_items">Items</string>
    <string name="dialog_tv_extras_amount">Extras Amount: %1$d</string>
    <string name="dialog_btn_extras">Choose Extras</string>
    <string name="dialog_btn_drink">Add Drink</string>
    <string name="dialog_et_comment_hint">Additional details for this order</string>
    <string name="dialog_tv_total">Total: %1$.2f %2$s</string>
    <string name="dialog_btn_keep_shopping">Keep Shopping</string>
    <string name="dialog_btn_order">Order</string>
    <string name="dialog_multi_spinner_default_text">Choose Your Extras</string>
    <string name="dialog_btn_add_time">Add time to pick your meal (Optional)</string>
    <string name="dialog_tv_time">HH/MM</string>
    <string name="dialog_spinner_default_text">Select Drink</string>
    <string name="dialog_no_extra_left">Addition of %1$d extra added to total</string>
    <string name="dialog_btn_keep_shopping_pressed">Order added to shopping basket</string>
    <string name="dialog_tv_includes_drink">This meal includes a drink</string>
    <string name="dialog_tv_not_includes_drink">This meal does not includes a drink</string>
    <string name="title_activity_about">About</string>
    <string name="dialog_tv_description">This app is good, use it.</string>
    <string name="dialog_tv_version">1.0</string>
    <string name="developedByTitle">Developed By:</string>
    <string name="developersNames"><![CDATA[Anael Shomrai & Shira Elitzur]]></string>
    <string name="appDescriptionTitle">Description:</string>
    <string name="appVersionTitle">Version:</string>
    <string name="appCredits">Credits:</string>
    <string name="tvCredits">icons: Freepik from www.flaticon.com </string>
    <string name="guest_user">Hello Guest</string>
    <string name="update_meal">Update</string>
    <string name="succesful_edit_meal">Your meal was update succesfuly</string>
    <string name="paypal_payment_total">Total: </string>
    <string name="paypal_payment_success">Payment transferred successfully</string>
    <string name="paypal_payment_canceled">Payment canceled</string>
    <string name="paypal_payment_failed">Payment has encountered some problems\nplease try again later</string>
    <string name="title_activity_orders_history">Orders History</string>
    <string name="history_meals_title">Meals:</string>
    <string name="history_items_title">Items:</string>
    <string name="history_extra_title">Extras-</string>
    <string name="history_comment_title">Comment-</string>
    <string name="history_drink_title">Drink-</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="history_pick_date">Pick date</string>
    <string name="history_showing">Showing up to 30 last orders</string>
    <string name="history_show_date">Showing orders from </string>
    <string name="history_start_date">Start Date</string>
    <string name="history_end_date">End Date</string>
    <string name="order_number_title">Order Number:</string>
    <string name="order_ready_text">Your order is ready, go to the cafeteria and show the approval here to the seller. Bon Appetit!</string>
    <string name="title_activity_order_ready">Order Ready</string>
    <string name="snack_bar_action_text">Go to basket</string>
    <string name="title_activity_user_details">User Details</string>
    <string name="update_user_btn_txt">Update User\'s Details</string>
    <string name="hint_edit_password">Press to edit your password</string>
    <string name="edit_password_btn_txt">Edit your password</string>
    <string name="old_password">Your old password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change Password</string>
    <string name="password_change_success">Password successfully changed</string>
    <string name="password_incorrect">Password is incorrect</string>
    <string name="update_user_success">Details updated successfully</string>
    <string name="update_user_failed">Details update failed</string>
    <string name="dialog_forgot_password_title">Password Recovery</string>
    <string name="dialog_forgot_password_message">An email with your password attached will be sent.</string>
    <string name="dialog_forgot_password_button">Send Email</string>
    <string name="dialog_forgot_password_success">An email was sent with the password</string>
    <string name="dialog_forgot_password_fail">Email is not valid</string>
    <string name="no_favorites">Time2eaT\nlearns about your favorites while you order...\nSo go on, order!</string>
    <string name="add">Add</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="logo">Logo</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="order_delivered">I took the order, and it\'s OK</string>
    <string name="star">&#9733;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_dialog_alert">Pay Attention</string>
    <string name="logout_dialog_message">If you will log out we wont be able to sent you a notification when your order is ready!</string>
    <string name="logout_dialog_negative">Stay logged in</string>
    <string name="logout_dialog_postive">Logout</string>
    <string name="empty_cart_dialog_title">Change Cafeteria</string>
    <string name="empty_cart_message">Your cart is not empty, if you change cafeteria your cart will not be saved.</string>
    <string name="empty_cart_postive">Ok</string>
    <string name="empty_cart_negative">Cancel</string>
    <string name="favorite_meals">Favorite Meals:</string>
    <string name="favorite_items">Favorite Items:</string>
    <string name="server_client_id">577951281609-kfltsqcajfqla2mbam01vhc36nmatuds.apps.googleusercontent.com</string>
    <string name="graph_title">Graph of payment in the last 5 months</string>
    <string-array name="months">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
</resources>