<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_cafeteria_menu"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_item_menu" />
        <item
            android:id="@+id/navigation_item_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/nav_item_cart" />
        <item
            android:id="@+id/navigation_item_history"
            android:icon="@drawable/orderd_history"
            android:title="@string/nav_item_history" />
        <item
            android:id="@+id/navigation_item_personal_details"
            android:icon="@drawable/personal_details"
            android:title="@string/nav_item_personal" />

        <!--<item-->
        <!--android:id="@+id/navigation_item_points"-->
        <!--android:icon="@drawable/star"-->
        <!--android:title="@string/nav_item_points" />-->
    </group>

    <group
        android:id="@+id/sub_menu"
        android:checkableBehavior="single">

        <!--<item-->
        <!--android:title="@string/nav_item_settings"-->
        <!--android:icon="@drawable/ic_settings_black_48dp"/>-->

        <item
            android:id="@+id/navigation_item_log_out"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/nav_item_log_out" />

        <item
            android:id="@+id/navigation_item_langauge"
            android:icon="@drawable/ic_language"
            android:title="@string/nav_item_language" />

        <item
            android:id="@+id/navigation_item_change_cafeteria"
            android:icon="@drawable/ic_action_database"
            android:title="@string/nav_item_change_cafeteria" />

        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/about"
            android:title="@string/nav_item_about" />

    </group>
</menu>