<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:src="@drawable/time2eat_icon_big"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/headLines3"
                android:paddingBottom="10dp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developedByTitle"
                android:textSize="@dimen/headLines3"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/developersNames"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appDescriptionTitle"
                android:textSize="@dimen/headLines3"
                android:textAlignment="viewStart"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_tv_description"
                android:layout_marginTop="10dp"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appCredits"
                android:textSize="@dimen/headLines3"
                android:textAlignment="viewStart"
                android:layout_marginTop="15dp" />

            <TextView
                android:gravity="start"
                android:id="@+id/tvCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvCredits" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appVersionTitle"
                android:textSize="@dimen/headLines3"
                android:textAlignment="viewStart"
                android:layout_marginTop="15dp" />

            <TextView
                android:gravity="start"
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dialog_tv_version" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>