<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_weight="30">

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textSize="@dimen/formsText"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="@dimen/formsText" />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:textSize="@dimen/formsText" />

</LinearLayout>