<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".ui.SignUpActivity"
    android:weightSum="10">

    <!--  The Title section -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:id="@+id/signUpAppTitle"
        android:textColor="@color/colorHeadlines"
        android:textSize="@dimen/headLines1"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/signup_title"
        android:textColor="@color/colorHeadlines"
        android:textSize="@dimen/headLines2"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"/>

    <!--  The edit-texts section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:weightSum="5"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_firstname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_lastname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <EditText
                android:inputType="textVisiblePassword"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:inputType="textVisiblePassword"
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!-- Button and login link -->

    <android.support.v7.widget.AppCompatButton
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:text="@string/signUpBtnText"
        android:id="@+id/signUpBtn"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/loginLinkTv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/login_text"
        android:textSize="@dimen/headLines3"
        android:textColor="@color/colorHeadlines"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

</LinearLayout>
