<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHeadlines"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="90"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:background="@color/colorPrimaryLight"
        android:layout_height="0dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Meal Name"
        android:id="@+id/tvMealName"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_tv_extras_amount"
        android:gravity="center_horizontal"
        android:id="@+id/tvExtrasAmount"
        android:layout_gravity="end"
        android:layout_weight="10" />

    <Button
        android:padding="0dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/dialog_btn_extras"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/btnExtras"
        android:clickable="true"
        android:layout_weight="10"
        android:gravity="center_vertical"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerExtras"
        android:layout_weight="10"
        android:overScrollMode="ifContentScrolls"
        android:spinnerMode="dropdown"
        android:visibility="gone"
        />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/dialog_btn_drink"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/btnDrink"
        android:clickable="true"
        android:padding="0dp"
        android:gravity="center_vertical"
        android:layout_weight="10"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDrink"
        android:layout_weight="10"
        android:overScrollMode="ifContentScrolls"
        android:spinnerMode="dropdown"
        android:visibility="gone"
        />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etComment"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:hint="@string/dialog_et_comment_hint"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_tv_total"
        android:padding="10dp"
        android:id="@+id/tvTotal"
        android:gravity="end"
        android:layout_weight="10"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_weight="10">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_keep_shopping"
            android:id="@+id/btnKeepShopping"
            android:layout_gravity="bottom"
            />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_order"
            android:id="@+id/btnOrder"
            android:layout_gravity="bottom"
            />

    </LinearLayout>


</LinearLayout>

</RelativeLayout>