<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".ui.LoginActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

<!--  The logo/name section -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/app_name"
        android:id="@+id/loginAppTitle"
        android:textColor="@color/colorHeadlines"
        android:textSize="@dimen/headLines1"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            >

            <EditText
                android:layout_weight="1"
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            >

            <EditText
                android:layout_weight="1"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password" />

        </android.support.design.widget.TextInputLayout>

<!-- Button and signup link -->

    <android.support.v7.widget.AppCompatButton
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:text="@string/loginBtnText"
        android:id="@+id/loginBtn"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/or"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorHeadlines"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

        <!--this is one option, for now i'm overiding the strings of facebook in the xml-->
        <!--facebook:com_facebook_login_text="Log In"-->
        <!--facebook:logout_text="Log Out"-->

    <TextView
        android:id="@+id/tvSignUpLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/signup_text"
        android:textSize="@dimen/headLines3"
        android:textColor="@color/colorHeadlines"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

</LinearLayout>
</ScrollView>